---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF013_1.py:4:12: RUF013 [*] PEP 484 prohibits implicit `Optional`
  |
4 | def f(arg: int = None):  # RUF011
  |            ^^^ RUF013
5 |     pass
  |
  = help: Convert to `Optional[T]`

ℹ Suggested fix
1 1 | # No `typing.Optional` import
  2 |+from typing import Optional
2 3 | 
3 4 | 
4   |-def f(arg: int = None):  # RUF011
  5 |+def f(arg: Optional[int] = None):  # RUF011
5 6 |     pass


